# doc-merge

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: index.html
src/: main.rs
src/templates/: search-index.js
