[package]
name = "doc-merge"
version = "0.3.0"
edition = "2021"
authors = ["Luke Sneeringer <luke@sneeringer.com>"]
description = "Combine rustdoc output of multiple, discrete crates"
license = "MIT"
readme = "README.md"
exclude = [".github"]
repository = "https://github.com/lukesneeringer/doc-merge"
categories = ["development-tools", "command-line-utilities"]
keywords = ["documentation", "rustdoc"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
fs_extra = "1"
regex = "1"
jzon = "0.12"
